@- Fixed bug #29838 Memory leak in sprintf argument swapping. (Thies) # by backporting one line from HEAD.